them chuc nang send noti telegram update user table and migrate
